--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion '25.0.0'
 
     defaultConfig {
-        applicationId "com.skyworks.android.skyworksapp"
+        applicationId "com.skyworks.android.xxxworksapp"
         minSdkVersion 18
         targetSdkVersion 23
         versionCode 1
