--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 *.iml
 .gradle
 /local.properties
-/.idea/workspace.xml
-/.idea/libraries
-/.idea/*
+.idea/*
+.idea/misc.xml
+.idea/modules.xml
 .DS_Store
 /build
 /captures
